--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -209,7 +209,7 @@ https://templatemo.com/tm-535-softy-pinko
             <div class="row">
                 <div class="col-lg-5 col-md-12 col-sm-12 align-self-center mobile-bottom-fix-big"
                     data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="https://041988e.netsolhost.com/Home/wp-content/uploads/2018/02/source-1.gif" class="rounded img-fluid d-block mx-auto"
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMCsy4x9oyW31KyVLnO3WjT4Xd1pklohEahg&usqp=CAU" class="rounded img-fluid d-block mx-auto"
                         alt="App">
                 </div>
                 <div class="col-lg-1"></div>
@@ -489,32 +489,42 @@ https://templatemo.com/tm-535-softy-pinko
 
     
     <!-- ***** Counter Parallax Start ***** -->
-    <section class="counter">
+    <section class="counter rounded">
         <div class="content">
             <div class="container">
+                <div class="mt-5 pt-5 text-center">
+                    <div class="row">
+                        <div class="offset-lg-3 col-lg-6">
+                            <div class="info">
+                                <h4 class="font-weight-bold mb-4">When you give us your class, we take full responsibility for your grades.</h4>
+                                <p class="font-weight-bolder">We are diligent and motivated tutors who can commit to any course schedule and format.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="count-item decoration-bottom">
-                            <strong>126</strong>
-                            <span>Projects</span>
+                            <strong>99.9</strong><span class="font-weight-bold">%</span>
+                            <span class="font-weight-bolder">We've achieved a passing grade of B and above over the past year.</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="count-item decoration-top">
-                            <strong>63</strong>
-                            <span>Happy Clients</span>
+                            <strong>5</strong>
+                            <span class="font-weight-bolder">We're young but have already reached some huge milestones.</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="count-item decoration-bottom">
-                            <strong>18</strong>
-                            <span>Awards Wins</span>
+                            <strong>800</strong>
+                            <span class="font-weight-bolder">Our tutors have completed more than 800 online courses.</span>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="count-item">
-                            <strong>27</strong>
-                            <span>Countries</span>
+                            <strong>60</strong>
+                            <span class="font-weight-bolder">Our team comprises of more than 60 skillful online tutors.</span>
                         </div>
                     </div>
                 </div>
@@ -524,10 +534,13 @@ https://templatemo.com/tm-535-softy-pinko
     <!-- ***** Counter Parallax End ***** -->
 
     <!-- ***** Blog Start ***** -->
-    <section class="section" id="blog">
-        <div class="container">
+
+    <!-- <section class="section" id="blog">
+        <div class="container"> -->
+
             <!-- ***** Section Title Start ***** -->
-            <div class="row">
+
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="center-heading">
                         <h2 class="section-title">Blog Entries</h2>
@@ -539,10 +552,11 @@ https://templatemo.com/tm-535-softy-pinko
                             nibh. Cras maximus venenatis molestie.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
+
             <!-- ***** Section Title End ***** -->
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post-thumb">
                         <div class="img">
@@ -596,7 +610,7 @@ https://templatemo.com/tm-535-softy-pinko
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Blog End ***** -->
 
     <!-- ***** Contact Us Start ***** -->
@@ -605,29 +619,27 @@ https://templatemo.com/tm-535-softy-pinko
             <!-- ***** Section Title Start ***** -->
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="center-heading">
-                        <h2 class="section-title">Talk To Us</h2>
+                    <div class="float-left">
+                        <h2 class="section-title">Chat With Us</h2><br>
+                        <p>Chat with one of our tutors and get the help you need.</p><br>
+                        <p class="btn btn-lg btn-warning text-dark font-weight-bolder">Chat With Us</p>
                     </div>
                 </div>
-                <div class="offset-lg-3 col-lg-6">
+                <!-- <div class="offset-lg-3 col-lg-6">
                     <div class="center-text">
                         <p>Maecenas pellentesque ante faucibus lectus vulputate sollicitudin. Cras feugiat hendrerit
                             semper.</p>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- ***** Section Title End ***** -->
 
-            <div class="row">
+            <div class="row mt-5">
                 <!-- ***** Contact Text Start ***** -->
                 <div class="col-lg-4 col-md-6 col-sm-12">
-                    <h5 class="margin-bottom-30">Keep in touch</h5>
+                    <h5 class="margin-bottom-30">Ready to get started?</h5>
                     <div class="contact-text">
-                        <p>110-220 Quisque diam odio, maximus ac consectetur eu, 10260
-                            <br>auctor non lorem
-                        </p>
-                        <p>You are NOT allowed to re-distribute Softy Pinko template on any template collection
-                            websites. Thank you.</p>
+                        <p class="btn btn-success btn-lg text-white font-weight-bolder">Get Instant Quote</p>
                     </div>
                 </div>
                 <!-- ***** Contact Text End ***** -->
@@ -686,7 +698,7 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright">Copyright &copy; 2020 Softy Pinko Company - Design: TemplateMo</p>
+                    <p class="copyright">Copyright &copy; 2021 Masomo <br>Designed by k e l v e a n</p>
                 </div>
             </div>
         </div>
